// Vitest Snapshot v1

exports[`<UserItem /> > should render when administrator=%p] false 1`] = `
<Styled(Styled(Link))
  to="/administration/users/b8vkclwp"
>
  <InitialIcon
    handle="bob"
    size="lg"
  />
  <strong>
    bob
  </strong>
</Styled(Styled(Link))>
`;

exports[`<UserItem /> > should render when administrator=%p] true 1`] = `
<Styled(Styled(Link))
  to="/administration/users/b8vkclwp"
>
  <InitialIcon
    handle="bob"
    size="lg"
  />
  <strong>
    bob
  </strong>
  <styled.span
    color="purple"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="user-shield"
    />
     Administrator
  </styled.span>
</Styled(Styled(Link))>
`;
